--- a/nginxx/nginx.conf
+++ b/nginxx/nginx.conf
@@ -1,45 +1,44 @@
 worker_processes 1;
-
+ 
 events { worker_connections 1024; }
-
+ 
 http {
-
-    sendfile on;
-
-    upstream fmanage {
-        server fmanage;
-    }
-
-    upstream login {
-        server login;
-    }
-
-    upstream register {
-        server register;
-    }
-
+ 
     server {
         listen 80;
 
-        location /api/register {
-        proxy_pass http://register/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
+        add_header 'Access-Control-Allow-Credentials' 'true';    
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+
+        location /api/register/ {
+        proxy_pass http://register:80/;
         proxy_set_header X-Real-IP  $remote_addr;
         proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header Host $host;
         }
 
-        location /api/login {
-            proxy_pass http://login/;
+        location /api/login/ {
+            proxy_pass http://login:80/;
             proxy_set_header X-Real-IP  $remote_addr;
             proxy_set_header X-Forwarded-For $remote_addr;
-            proxy_set_header Host $host;
         }
 
-        location /api/file {
-            proxy_pass http://fmanage/;
+        location /api/file/ {
+            proxy_pass http://fmanage:80/;
             proxy_set_header X-Real-IP  $remote_addr;
             proxy_set_header X-Forwarded-For $remote_addr;
-            proxy_set_header Host $host;
         }
-    }
+
+         location / {
+            root   /var/www/html/;
+            index  index.html index.htm;
+        }
+
+    }   
+
 }
