--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,45 @@
-version: '2'
+version: '3'
 
 services:
   gateway:
     image: nginx:latest
     links:
-      - fmanage
-      - login
-      - register
+      - fmanage:fmanage
+      - login:login
+      - register:register
     ports:
       - "1337:80"
     volumes:
       - ./nginxx/nginx.conf:/etc/nginx/nginx.conf
-    # depends_on:
-    #   - fmanage
-    #   - login
-    #   - register
   
   fmanage:
     build: ./fmanage/.
-  
+    env_file:
+      - vars.env
+    expose:
+      - "80"
+
   login:
     build: ./login/.
+    env_file:
+      - vars.env
+    expose:
+      - "80"
 
   register:
     build: ./register/.
+    env_file:
+      - vars.env
+    links:
+      - mailer:mailer
+    expose:
+      - "80"
+
+
+  mailer:
+    build: ./mailer/.
+    env_file:
+      - vars.env
+    expose:
+      - "80"
+
