--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,25 +11,26 @@ services:
       - "1337:80"
     volumes:
       - ./nginxx/nginx.conf:/etc/nginx/nginx.conf
-  
+      - ./nginxx/frontend/:/var/www/html/
+
   fmanage:
     build: ./fmanage/.
     env_file:
-      - vars.env
+      - ./secrets/vars.env
     expose:
       - "80"
 
   login:
     build: ./login/.
     env_file:
-      - vars.env
+      - ./secrets/vars.env
     expose:
       - "80"
 
   register:
     build: ./register/.
     env_file:
-      - vars.env
+      - ./secrets/vars.env
     links:
       - mailer:mailer
     expose:
@@ -39,7 +40,7 @@ services:
   mailer:
     build: ./mailer/.
     env_file:
-      - vars.env
+      - ./secrets/vars.env
     expose:
       - "80"
 
