--- a/nginxx/nginx.conf
+++ b/nginxx/nginx.conf
@@ -11,10 +11,15 @@ http {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
-        add_header 'Access-Control-Allow-Credentials' 'true';    
+        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
 
         location /api/register/ {
         proxy_pass http://register:80/;
